2011 current tech stack changes
git-svn-id: https://ncisvn.nci.nih.gov/svn/cacoresdk/branches/CACORESDK_441_BRANCH@1654 221b6c9c-8bdd-4aed-8ce9-b1cbd18b7e1b